# genmesh

./: .travis.yaml  .travis.yml  Cargo.toml  readme.md
.github/workflows/: ci.yaml
benches/: bench.rs
examples/viewer/: Cargo.toml
examples/viewer/src/: main.rs
src/: bevy_compat.rs  circle.rs  cone.rs  cube.rs  cylinder.rs  generator.rs  generators.rs  icosphere.rs  indexer.rs  lib.rs  math.rs  neighbors.rs  plane.rs  poly.rs  polygon.rs  quad.rs  sphere.rs  torus.rs  triangle.rs  triangulate.rs
src/example/: Cargo.toml  main.rs
tests/: generate.rs  test.rs  winding.rs
