[package]
name = "genmesh"
version = "0.6.2"
authors = [
    "Coraline Sherratt <cora.sherratt@gmail.com>",
    "Dzmitry Malyshau <kvarkus@gmail.com>",
]

license = "Apache-2.0"
description = "A package for generating 3D meshes"
homepage = "https://github.com/gfx-rs/genmesh"
repository = "https://github.com/gfx-rs/genmesh"
edition = "2018"

[lib]
name = "genmesh"
path = "src/lib.rs"

[dependencies]
mint = "0.5"

[dev-dependencies]
cgmath = { version = "0.18" }
